--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <body>
     <h1>Hello!</h1><br>
     <img class="P1" width="100%" height="200px" src="PICS/payplan.jpg">
+    <center><h1>OR... Check out our coaches</h1></center>
+    <img class="p2" src="PICS/Coachomar.jpg" width="100%" height="200px">
 </body>
 <style>
     body{
@@ -16,4 +18,7 @@
     .P1{
         border-radius: 20px;
     }
-</style>
+    .p2{
+        border-radius: 20px;
+    }
+</style> 
