--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         font-family: sans-serif;
     }
     h1{
-        size: 200px;
+        font-size: 200px;
     }
     .P1{
         border-radius: 20px;
