--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <img class="P1" width="100%" height="200px" src="PICS/payplan.jpg">
     <center><h2>OR... Check out our coaches</h2></center>
     <img class="p2" src="PICS/Coachomar.jpg" width="100%" height="200px">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4017793332500034"
+     crossorigin="anonymous"></script>
 </body>
 <style>
     body{
