--- a/Comar.html
+++ b/Comar.html
@@ -3,7 +3,10 @@
 </head>
 <body>
     <h1>Coach Omar</h1><br>
-    
+    <ul>
+        <li><h2>Name: Omar Hatem</h2></li>
+        <li><h2>Phone number: 01150262130</h2></li>
+      </ul>
 
 </body>
 <style>
