--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Hello!</h1><br>
-    <img class="P1" width="100%" height="200px" src="PICS/payplan.jpg">
+    <a href="Comar.html"><img class="P1" width="100%" height="200px" src="PICS/payplan.jpg"></a>
     <center><h2>OR... Check out our coaches</h2></center>
     <img class="p2" src="PICS/Coachomar.jpg" width="100%" height="200px">
 </body>
