Added Omar's identeties

--- a/Comar.html
+++ b/Comar.html
@@ -3,10 +3,11 @@
 </head>
 <body>
     <h1>Coach Omar</h1><br>
-    <ul>
-        <li><h2>Name: Omar Hatem</h2></li>
-        <li><h2>Phone number: 01150262130</h2></li>
-      </ul>
+    <center><h1>Name:</h1></center><br>
+    <center><h1>Omar Hatem</h1></center><br><br><br> <br><br>
+    <center><h1>Phone Number:</h1></center><br><br>
+    <center><h1>01150262130</h1></center><br><br>
+
 
 </body>
 <style>
