--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <h1>Hello!</h1><br>
-    <a href="Comar.html"><img class="P1" width="100%" height="200px" src="PICS/payplan.jpg"></a>
+   <img class="P1" width="100%" height="200px" src="PICS/payplan.jpg">
     <center><h2>OR... Check out our coaches</h2></center>
-    <img class="p2" src="PICS/Coachomar.jpg" width="100%" height="200px">
+    <a href="Comar.html"><img class="p2" src="PICS/Coachomar.jpg" width="100%" height="200px"></a>
 </body>
 <style>
     body{
