--- a/Comar.html
+++ b/Comar.html
@@ -2,7 +2,7 @@
     <title>Welcome to FitPunch!</title>
 </head>
 <body>
-    <h1>Coach Omar</h1><br>
+    <img src="PICS/Comar.jpg"> <h1>Coach Omar</h1><br>
     <center><h1>Name:</h1></center><br>
     <center><h1>Omar Hatem</h1></center><br><br><br> <br><br>
     <center><h1>Phone Number:</h1></center><br><br>
