--- a/Comar.html
+++ b/Comar.html
@@ -2,7 +2,7 @@
     <title>Welcome to FitPunch!</title>
 </head>
 <body>
-    <img src="PICS/Comar.jpg"> <h1>Coach Omar</h1><br>
+    <img width = "30%" class="p1" src="PICS/Comar.jpg"> <h1>Coach Omar</h1><br>
     <center><h1>Name:</h1></center><br>
     <center><h1>Omar Hatem</h1></center><br><br><br> <br><br>
     <center><h1>Phone Number:</h1></center><br><br>
@@ -20,5 +20,8 @@
     }
     h2{
         font-size: 50px;
+    }
+    .p3{
+        border-radius: 20px;
     }
 </style> 
