--- a/Comar.html
+++ b/Comar.html
@@ -2,7 +2,8 @@
     <title>Welcome to FitPunch!</title>
 </head>
 <body>
-    <img width = "30%" class="p1" src="PICS/Comar.jpg"> <h1>Coach Omar</h1><br>
+    <img width = "20%" class="p3" src="PICS/Comar.jpg">
+    <h1>Coach Omar</h1><br>
     <center><h1>Name:</h1></center><br>
     <center><h1>Omar Hatem</h1></center><br><br><br> <br><br>
     <center><h1>Phone Number:</h1></center><br><br>
