--- a/Comar.html
+++ b/Comar.html
@@ -3,11 +3,11 @@
 </head>
 <body>
     <img width = "20%" class="p3" src="PICS/Comar.jpg">
-    <h1>Coach Omar</h1><br>
-    <center><h1>Name:</h1></center><br>
-    <center><h1>Omar Hatem</h1></center><br><br><br> <br><br>
-    <center><h1>Phone Number:</h1></center><br><br>
-    <center><h1>01150262130</h1></center><br><br>
+    <h1>Coach Omar</h1>
+    <center><h1>Name:</h1></center>
+    <center><h1>Omar Hatem</h1></center><br><br><br><br><br>
+    <center><h1>Phone Number:</h1></center>
+    <center><h1>01150262130</h1></center>
 
 
 </body>
