--- a/Comar.html
+++ b/Comar.html
@@ -2,7 +2,7 @@
     <title>Welcome to FitPunch!</title>
 </head>
 <body>
-    <center><img width = "30%" class="p3" src="PICS/Comar.jpg"></center> 
+    <center><img width = "30%" class="p3" src="PICS/Comar.jpg"></center> <br><br>
     <center><h1>Name:</h1></center>
     <center><h1>Omar Hatem</h1></center><br><br><br><br><br>
     <center><h1>Phone Number:</h1></center>
